{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 8,
  "lineage": "8e9c328b-5d3a-c0a9-294d-1e937c4ceb94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible_conf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:426857564226:instance/i-0896c0e656df7222d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0896c0e656df7222d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "krishna",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0425c355738d5a803",
            "private_dns": "ip-10-10-1-190.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.190",
            "public_ip": "54.159.56.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf4b0557d1d84e36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ee1e5801f3f8de9b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee877959a248d554",
            "tags": {
              "Name": "ansible_server"
            },
            "tags_all": {
              "Name": "ansible_server",
              "owner": "krishna",
              "project": "testvpc",
              "silo": "devsecops",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ee1e5801f3f8de9b"
            ]
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gwy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426857564226:internet-gateway/igw-06e0440f4c82b6622",
            "id": "igw-06e0440f4c82b6622",
            "owner_id": "426857564226",
            "tags_all": {
              "owner": "krishna",
              "project": "testvpc",
              "silo": "devsecops",
              "terraform": "true"
            },
            "vpc_id": "vpc-097ed076858bace8d"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426857564226:route-table/rtb-0003bdee1a4719a05",
            "id": "rtb-0003bdee1a4719a05",
            "owner_id": "426857564226",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e0440f4c82b6622",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "owner": "krishna",
              "project": "testvpc",
              "silo": "devsecops",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-097ed076858bace8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_internet_gwy",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0fee08d062140f4",
            "route_table_id": "rtb-0003bdee1a4719a05",
            "subnet_id": "subnet-0ee877959a248d554"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gwy",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426857564226:security-group/sg-0ee1e5801f3f8de9b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee1e5801f3f8de9b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240131094952216100000001",
            "name_prefix": "terraform-",
            "owner_id": "426857564226",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "owner": "krishna",
              "project": "testvpc",
              "silo": "devsecops",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-097ed076858bace8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426857564226:subnet/subnet-0ee877959a248d554",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee877959a248d554",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "426857564226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "owner": "krishna",
              "project": "testvpc",
              "silo": "devsecops",
              "terraform": "true"
            },
            "vpc_id": "vpc-097ed076858bace8d"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426857564226:vpc/vpc-097ed076858bace8d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-00ece841197f180ed",
            "default_route_table_id": "rtb-0fbbb14781b043cde",
            "default_security_group_id": "sg-0fc6827ee0f08b95b",
            "dhcp_options_id": "dopt-0e37c64a8c849a8fc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097ed076858bace8d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fbbb14781b043cde",
            "owner_id": "426857564226",
            "tags_all": {
              "owner": "krishna",
              "project": "testvpc",
              "silo": "devsecops",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}